@@ -16,10 +16,6 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-/*
- * This file describes local_irq/flags_xxx APIs.
- */
-
 #ifndef _SANDIX_IRQFLAGS_H_
 #define _SANDIX_IRQFLAGS_H_
 
@@ -29,29 +25,44 @@
 #define local_irq_enable()	arch_local_irq_enable()
 #define local_irq_disable()	arch_local_irq_disable()
 
-#define safe_halt()		arch_safe_halt()
 #define halt()			arch_halt()
+#define safe_halt()		arch_safe_halt()
 
+/*
+ * Test hardware interrupt enable bit
+ */
 #define irqs_disabled()		arch_irqs_disabled()
 
+/*
+ * Test flags
+ */
 #define irqs_disabled_flags(flags)			\
 	do {						\
 		typecheck(unsigned long, flags);	\
 		arch_irqs_disabled_flags(flags);	\
 	} while (0)
 
+/*
+ * Get status and disable interrupts
+ */
 #define local_irq_save(flags)				\
 	do {						\
 		typecheck(unsigned long, flags);	\
 		flags = arch_local_irq_save();		\
 	} while (0)
 
+/*
+ * Set interrupt enabled status
+ */
 #define local_irq_restore(flags)			\
 	do {						\
 		typecheck(unsigned long, flags);	\
 		arch_local_irq_restore(flags);		\
 	} while (0)
 
+/*
+ * Read interrupt enabled status
+ */
 #define local_save_flags(flags)				\
 	do {						\
 		typecheck(unsigned long, flags);	\
