@@ -505,5 +505,7 @@ Thu Feb 18 09:40:21 CST 2016
 
 
 Fri Feb 19 12:38:05 CST 2016
+- [+] include/asm-generic/irq.h
+- [+] include/asm-generic/irqflags.h
 - [M] arch/x86/include/asm/irqflags.h
 - [M] include/sandix/irqflags.h			[D] local_irq_XXX APIs
